--- a/03-cordova/plugins/cordova-plugin-whitelist/package.json
+++ b/03-cordova/plugins/cordova-plugin-whitelist/package.json
@@ -22,7 +22,7 @@
   "_resolved": "https://registry.npmjs.org/cordova-plugin-whitelist/-/cordova-plugin-whitelist-1.3.4.tgz",
   "_shasum": "31938545c7c3e7de35c20ab08c2c3afa06e8a3f9",
   "_spec": "cordova-plugin-whitelist@1",
-  "_where": "D:\\COURS\\IMT\\FI4\\PROGRAMMATION_MULTIPLATEFORMES\\03-cordova",
+  "_where": "C:\\Users\\lucas\\Desktop\\Cours\\Progammation multi-platforme\\IMT-AppMobile\\hellocordova",
   "author": {
     "name": "Apache Software Foundation"
   },
